# Multi-Proxy

./: .gitignore  CMakeLists.txt  README.md  deletpcd.sh  package.xml
config/: rviz.rviz  submapfusion_s3e.yaml
docker/: Dockerfile  analyze_docker_stats_per_container.py  docker-compose.yml  docker_stats_recorder.sh  net_work_loss_robot_0.sh  net_work_loss_robot_1.sh  net_work_loss_robot_2.sh  stats.csv
launch/: multi_s3e.launch  multi_s3e0.launch  multi_s3e1.launch  multi_s3e2.launch  multi_s3e_master.launch
log/bw_compare/: robot_0_descriptor_bw.txt  robot_0_dual_bw.txt  robot_0_pose2pose_bw.txt  robot_1_descriptor_bw.txt  robot_1_dual_bw.txt  robot_1_pc_bw.txt  robot_1_pose2pose_bw.txt  robot_2_dual_bw.txt  robot_2_pc_bw.txt
log/pcm_matrix/: PCM_matrix_robot_1_wrt_0.clq.mtx  PCM_matrix_robot_1_wrt_1.clq.mtx  PCM_matrix_robot_2_wrt_0.clq.mtx  PCM_matrix_robot_2_wrt_1.clq.mtx  PCM_matrix_robot_2_wrt_2.clq.mtx
src/: BackEnd.cpp  BackEnd.h  DualFrame.cpp  DualFrame.h  KeyFrame.cpp  KeyFrame.h  KeyFrameList.cpp  KeyFrameList.h  LoopDetector.cpp  LoopDetector.h  MultiOutlierRejection.cpp  MultiOutlierRejection.h  MultiProxyPipeline.cpp  MultiProxyPipeline.h  Multi_Proxy_node.cpp  Visulization.cpp  Visulization.h  pcManager.cpp  pcManager.h  utility.h
third_parties/STDesc/: STDesc.cpp  STDesc.h
third_parties/fast_max-clique_finder/src/: findCliqueHeuInc.cpp
